# TinyLearn

./: README.md  dataGeneration.py  main.py  main_cnn.py  main_detection.py  main_lda.py  main_logisitic.py  main_svm.py  main_tsne.py  try.py  utils.py
cpp/: CMakeLists.txt  dataset.cpp  dataset.h  featureGeneration.cpp  featureGeneration.h  includes.h  main.cpp  models.cpp  models.h
models/: CNN.py  CNNSolver.py  FisherModel.py  LogisticRegressioner.py  SVM.py  __init__.py  myCNN.py
python/: dataGeneration.py  hog.xml  main_lda.py  main_pca.py  main_tsne.py
python/models/: CNNSolver.py  LogisticRegressioner.py  SVM.py  myCNN.py
